# src/index.js
@@ -65,6 +65,7 @@ import {
   handleUserInfo,
 } from "./controllers/profile.controller.js";
 import { upload } from "./middleware/imageUpload.middleware.js";
+import { handleAllTypeSearch } from "./controllers/alltypesearch.controller.js";
 
 const __filename = fileURLToPath(import.meta.url);
 const __dirname = path.dirname(__filename);
@@ -211,6 +212,7 @@ app.post(
 app.post("/api/v1/users/check-email", handleCheckEmail);
 
 app.post("/api/v1/users/search/category", handleSearch);
+app.get("/api/v1/users/search/alltype", handleAllTypeSearch);
 
 app.get("/api/v1/home/best", handleGetBestTaste);
 app.get("/api/v1/home/pick", handleGetRandomCocktails);
